# smart_scanner

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  compose.prod.yaml  compose.yaml  docker-compose.yml  notes.txt
.github/workflows/: docker-image.yml
dashboard/: Dockerfile  app.py  requirements.txt  tailwind.config.js
dashboard/static/: build.css
dashboard/templates/: _dashboard_oob.html  _details.html  _errors_tbody.html  _orders_tbody.html  _pnl.html  _positions.html  _row_error.html  _row_order.html  _row_signal.html  _signals_tbody.html  _summary.html  base.html  index.html
deploy/: README_DEPLOY.md
smart_scanner/: .env.example  bandit.py  blofin_client.py  calibration.py  config.py  emergency.py  features.py  indicators.py  labeler.py  learn.py  lifecycle.py  metrics.py  pnl_report.py  pretty.py  pyproject.toml  regime.py  risk_manager.py  scanner_runner.py  setup.cfg  signal_engine.py  signal_types.py  simple_bot.py  smart_scanner.code-workspace  strategies.py  trader.py  ws_klines.py  ws_orderflow.py  ws_private.py  ws_public.py  ws_universe.py
